<resources>
    <string name="app_name">AppKotlinDSM</string>
    <string name="op_1">Promedio de estudiante</string>
    <string name="op_2">Salario neto empleado</string>
    <string name="menu">Inicio</string>

        <string name="email">   Email</string>

    <string name="title_employee">Empleados</string>
    <string name="employee_name">   Nombre del empleado</string>
    <string name="base_salary">   Salario base</string>
    <string name="net_salary">Salario neto</string>
    <string name="calculate">Calcular</string>


    <string name="title_student">Estudiantes</string>
    <string name="student_name">Nombre del estudiante</string>
    <string name="student_grade1">Nota 1</string>
    <string name="student_grade2">Nota 2</string>
    <string name="student_grade3">Nota 3</string>
    <string name="student_average">Promedio</string>

    <string name="btn_Signup">Sign Up</string>
    <string name="btn_Login">Log in</string>

</resources>