<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="24dp"
            android:fontFamily="sans-serif"
            android:text="@string/title_employee"
            android:textColor="@color/black"
            android:textSize="30sp"

            />

        <EditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/edit_text_bg"
            android:fontFamily="sans-serif"
            android:hint="@string/employee_name"
            android:inputType="text"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textColor="@color/black"
            android:textColorHint="#4B4A50"
            app:layout_constraintHorizontal_bias=".5"
            app:layout_constraintWidth_percent="0.8" />

        <EditText
            android:id="@+id/et_salary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/edit_text_bg"
            android:fontFamily="sans-serif"
            android:hint="@string/base_salary"
            android:inputType="numberDecimal"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textColor="@color/black"
            android:textColorHint="#4B4A50" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/calc_btn2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/RVempleados"
            app:srcCompat="@drawable/ic_plus"
            tools:ignore="VectorDrawableCompat" />

    </LinearLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="480dp"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/RVempleados"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            app:layoutManager="LinearLayoutManager" />

    </androidx.core.widget.NestedScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>

